--- a/spring-integration-redis/pom.xml
+++ b/spring-integration-redis/pom.xml
@@ -47,7 +47,12 @@
 		<dependency>
 			<groupId>com.iaspec.ecph</groupId>
 			<artifactId>ecph-payment-model</artifactId>
-			<version>1.0.0</version>
+			<version>2.0.0.20221228</version>
+		</dependency>
+		<dependency>
+			<groupId>com.iaspec.ecph</groupId>
+			<artifactId>ecph-investigation-model</artifactId>
+			<version>2.0.0.20221228</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
